# esp32_sigrok

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32dev  toflash.c
.github/workflows/: main.yml
capture/: OscScreenGrabLAN.py
components/: Makefile
components/emul_ip/: emul_ip.c  lwip_ethoc.c
components/libscpi/: CMakeLists.txt  Makefile  component.mk
components/libscpi/inc/scpi/: config.h
components/libscpi/src/: parser.c
components/pi2s/: i2s_parallel.c  i2s_parallel.h
components/spidriver/: CMakeLists.txt
components/tft/: tftspi.c  tftspi.h
linux/: Makefile  main.c  sampling.c  scpi-server.py
main/: CMakeLists.txt  Header.h  Kconfig.projbuild  analog-testdata.c  analog.c  analog.h  app-config.h  app_main.c  collector.c  collector.h  draw_osc.c  esp32_sump.c  esp32_sump.h  espScope.cpp  esp_rest_main.c  file_server.c  hack-ledc.c  ota_server.c  ota_server.h  read_chars.c  read_chars.h  sampler.c  sampler.h  scpi-def.c  scpi-def.h  scpi_server.c  scpi_server.h  scpi_sock_server.c  sump_server.c
scopecmd/: Makefile
scopecmd/src/: cfgmap.cpp  cfgmap.h  freetmc.h  freetmc_remote.cpp  freetmc_remote.h  netcomm.cpp  netcomm.h  protocol.h  rigoltmc.h  rigolwfm.h  rigwfm.cpp  scopecmd.cpp  simple_except.h
sigrok_build/: CMakeLists.txt
spiffs_image/: demo.js  index.html
